# exoctk

./: .gitignore  .gitingore  .pep8speaks.yml  .pyup.yml  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.rst  README.rst  RELEASES.md  __init__.py  environment-3.5.yml  environment-3.6.yml  environment-3.7.yml  environment.yml  exoctk-env.yml  pip_requirements.txt  pip_requirements.yml  pyproject.toml  readthedocs.yml  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  security.yml  test.yml
ExoCTK/: __init__.py  bollinger.html  conftest.py  core.py  helpers.py  modelgrid.py  setup_package.py  svo.py  utils.py
ExoCTK/bar/: __init__.py  call_pymultinest.py  corner.py  ctran.py  fm.py  make_spec.py  make_spec_MCMC.py  setup.py  setup_package.py  thermo.py
ExoCTK/contam_visibility/: __init__.py  astro_funcx.py  contam_visibility.py  ephemeris_old2x.py  f_visibilityPeriods.py  generate_JH_HK_colors.py  math_extensionsx.py  quaternionx.py  resolve.py  rotationsx.py  sossContamFig.py  sossFieldSim.py  time_extensionsx.py  visibilityPA.py
ExoCTK/data/: bib.txt  filter_list.p
ExoCTK/example_subpkg/: setup_package.py
ExoCTK/exotransmit/: exotransmit.pyx  setup_package.py
ExoCTK/forward_models/: __init__.py  exotransmit.py  forward_models.py  setup_package.py
ExoCTK/integrations_groups/: integrations_groups.py
ExoCTK/ldc/: ldc_demo.ipynb  ldcfit.py  ldcplot.py
ExoCTK/lightcurve_fitting/: __init__.py  fitters.py  lightcurve.py  models.py  parameters.py
ExoCTK/limb_dark/: __init__.py  ldc_demo.ipynb  ldcfit.py  ldcplot.py
ExoCTK/limb_darkening/: __init__.py  limb_darkening_fit.py  limb_darkening_plot.py
ExoCTK/nircam_coronagraphy/: nircam_coronagraphy.py  test_template.json
ExoCTK/notebooks/: WASP43b-StartWindow.eps  integrations_groups_demo.ipynb  ldc_demo.ipynb  lightcurve_fitting_demo.ipynb  limb_darkening_demo.ipynb  pal_demo.ipynb  pal_exotransmit_demo.ipynb  pal_forward_models_demo.ipynb  tot_demo.ipynb
ExoCTK/pal/: __init__.py  _exotransmit_wrapper.pyx  exotransmit.py  exotransmit.pyx  exotransmit_demo.ipynb  forward_models.py  setup_package.py
ExoCTK/retrievals/: setup_package.py
ExoCTK/tests/: __init__.py  limbdarkening_script.py  test_limb_darkening.py  tests.py
ExoCTK/tor/: PArange.py  __init__.py  ephemeris_old2x.py  f_visibilityPeriods.py  p_computeRangePA.py  quaternionx.py  rotationsx.py  runSossFieldSim.py  sossContamFig.py  sossFieldSim.py  time_extensionsx.py  tor.py  visibilityPA.py
ExoCTK/tot/: HST_TExoNS.py  HST_WFC3_Tutorial.ipynb  README.md  WASP43b-StartWindow.eps  __init__.py  setup_package.py  smooth.py  transit_obs.py  wasp43b_G141.p
ci/: install_conda.sh  setup_conda_env.sh
docker/: .env  compose.yaml  redis.yaml
docker/dockerfiles/: DataDockerfileExoctk  DataDockerfilePandeia  DataDockerfileSynphot
docker/exoctk/: Dockerfile  exoctk_entrypoint.sh  exoctk_test_script.sh  test_exoctk_page.py  worker_entrypoint.sh
docker/pandexo/: Dockerfile  exomast.py  pandexo_entrypoint.sh  run_online.py  view.html
docs/: Makefile  conf.py  data_release_audit_v2026.7.md  data_release_inventory_v2026.7.json  index.rst  make.bat  rtd_environment.yaml
docs/ExoCTK/: index.rst
docs/core/: index.rst
docs/pal/: exotransmit.rst  forward_models.rst
docs/source/: ExoCTK.atmospheric_retrievals.rst  ExoCTK.contam_visibility.rst  ExoCTK.integrations_groups.rst  ExoCTK.limb_darkening.rst  ExoCTK.nircam_coronagraphy.rst  ExoCTK.rst  ExoCTK.tests.rst  exoctk.atmopspheric_retrievals.rst  exoctk.atmospheric_retrievals.rst  exoctk.contam_visibility.rst  exoctk.groups_integrations.rst  exoctk.integrations_groups.rst  exoctk.lightcurve_fitting.rst  exoctk.limb_darkening.rst  exoctk.nircam_coronagraphy.rst  exoctk.phase_constraint_overlap.rst  exoctk.rst  exoctk.tests.rst  index.rst  modules.rst
docs/tutorials/: PhaseConstraintCalculator.rst  exoctk.AtmosphericRetrivals.rst  exoctk.GroupsandIntegrationsCalculator.rst  exoctk.LimbDarkening.rst  exoctk.PhaseConstraintCalculator.rst
env/: environment-3.10.yml  environment-3.11.yml  environment-3.5.yml  environment-3.6.yml  environment-3.7.yml  environment-3.8.yml  environment-3.9.yml
exoctk/: __init__.py  _version.py  celery_config.py  helpers.py  log_exoctk.py  modelgrid.py  pkgdata.py  references.py  setup_package.py  throughputs.py  utils.py
exoctk/ExoCTK/: setup_package.py
exoctk/atmospheric_retreivals/: param_file.yaml  platon_wrapper.py
exoctk/atmospheric_retrievals/: aws_config.json  aws_tools.py  aws_wrapper.py  build-exoctk-env-cpu.sh  build-exoctk-env-gpu.sh  chimera.py  chimera_utils.py  empty_parameter_file.json  examples.py  exoctk-aws-build-gpu.sh  exoctk-aws-build.sh  exoctk-aws-init.sh  exoctk-env-init.sh  gnumpy.py  launch_ec2.py  npmat.py  platon_example.py  platon_example_aws.py  platon_wrapper.py  test_aws_tools.py  wfc3_free_retrieval_transmission.json
exoctk/contam_visibility/: ._gtsContamFig.py  __init__.py  _fieldSim.py  astro_funcx.py  contamination_figure.py  ephemeris_old2x.py  f_visibilityPeriods.py  field_simulator.py  gaia_tap.py  gtsContamFig.py  gtsFieldSim.py  lrsFieldSim.py  make_contam_plot.py  make_contam_traces.py  make_miri_lrs_traces.py  math_extensionsx.py  miniTools.py  miri_lrs.py  modes.py  new_contam_figure.py  new_vis_plot.py  precompute.py  quaternionx.py  resolve.py  sossContamFig.py  sossFieldSim.py  source_catalog.py  time_extensionsx.py  visibilityPA.py  vpa.py
exoctk/exoctk_app/: '  __init__.py  app_exoctk.py  form_validation.py  log_exoctk.py  plot_filter_tp.py  test_obs.html  test_sim.html
exoctk/forward_models/: forward_models.py
exoctk/groups_integrations/: __init__.py  groups_integrations.py
exoctk/integrations_groups/: __init__.py
exoctk/lightcurve_fitting/: __init__.py  fitters.py  lightcurve.py  models.py  parameters.py  simulations.py
exoctk/limb_darkening/: __init__.py  (+2 more)
scripts/: audit_exoctk_data_archives.py
tmp/: ldc_result.ecsv
(+571 files in other folders)
