[project]
name = "exoctk"
description = "Exoplanet Characterization Toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name= "Matthew Bourque" },
  { name="Néstor Espinoza" },
  { name="Joseph Filippazzo"},
  { name="Mees Fix" },
  { name="Teagan King" },
  { name="Catherine Martlin" },
  { name="Jennifer Medina" },
  { name="Natasha Batalha" },
  { name="Taylor James Bell" },
  { name="Michael Fox" },
  { name="Jules Fowler" },
  { name="Jonathan Fraine" },
  { name="Matthew Hill" },
  { name="Nikole Lewis" },
  { name="Kevin Stevenson" },
  { name="Jeff Valenti" },
  { name="Hannah Wakeford" },
]
keywords = ["astronomy", "python"]
classifiers = ["Programming Language :: Python"]
dependencies = [
  'astropy>=5.3.1',
  'astroquery>=0.4.6',
  'batman-package>=2.5.3',
  'bibtexparser>=1.2.0',
  'bokeh>=3.0,<=3.9.0',
  'docopt>=0.6.2',
  'flask>=1.1.2',
  'flask_wtf>=0.14.3',
  'h5py>=3.2.1',
  'hotsoss>=0.1.11',
  'matplotlib>=3.4.1',
  'numpy>=2.4.4',
  'pandas>=2.0.3',
  'platon>=5.1.2',
  'pysiaf>=0.10.0',
  'regions>=0.5',
  'scipy>=1.11.1',
  'sqlalchemy>=1.4.4',
  'svo_filters>=0.5.3',
  'wtforms>=2.3.3',
  'jwst_gtvt>=1.1.1',
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest>=6.2.2",
  "pytest-cov>=7.0.0",
]
docs = [
  "sphinx>=3.5.3",
  "sphinx_astropy>=1.10",
  "sphinx_rtd_theme>1.2.0",
  "stsci_rtd_theme>=1.0.1",
  "numpydoc>=1.1.0"
]
server = [
  "celery[redis]>=5",
  "gunicorn>=20.1.0",
]
container-test = [
  "selenium>=4",
  "tabulate",
]

[project.license]
file = "LICENSE"
content-type = "text/plain"

[project.urls]
Repository = "https://github.com/ExoCTK/exoctk"

[build-system]
requires = [
  "setuptools>=68.0.0",
  "numpy>=2.4.4",
  "wheel>=0.40",
  "setuptools_scm>=7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]

[tool.pytest]
junit_family = "xunit2"
