[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
skip_docs = True

[ah_bootstrap]
auto_use = True

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = ExoCTK
description = Exoplanet Characterization Tool Kit
long_description = This is a package to reduce and analyze observations of transiting exoplanets.
author = Joe Filippazzo Matthew Hill
author_email = jfilippazzo@stsci.edu
license = BSD
edit_on_github = True
github_project = ExoCTK/ExoCTK
install_requires = numpy scipy cython matplotlib numba pysynphot sphinx_automodapi sphinx_rtd_theme bibtexparser bokeh batman-package astroquery h5py
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.1.3dev
external_files = /user/jfilippazzo/Models/ExoCTK/

[entry_points]
exotransmit = ExoCTK.pal._exotransmit_wrapper:exotransmit
collect_exotransmit_data = ExoCTK.pal.exotransmit:collect_exotransmit_data
